--- a/styles.css
+++ b/styles.css
@@ -35,51 +35,89 @@
     color: #f9faf8;
 }
 
-
-
-.hero {
+.content {
+    display: flex;
     background-color: #1F2937
+
 }
 
-.hero-left {
-    width: 50%;
-    padding: 72px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-left: 15%;
-    border: white dotted;
+.content-left {
+    flex: 1;
+  
+
 }
 
-.hero-right {
-    color: white;
-    display: flex;
-    justify-content: flex-end;
-    border: white dotted;
-
+.content-right {
+    justify-content: center;
+    flex: 1;
     
 }
 
-
 h1 {
-    color: #f9faf8;
     font-size: 48px;
     font-weight: extra-bold;
-    padding: 18px;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 32px;
 }
 
 .subtext {
-    color:#e5e7EB;
     font-size: 18px;
-    padding-left: 18px;
+    color: #e5e7EB;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 32px;
 }
 
-.button {
-    margin: 18px;
-    background-color: #3882f6;
-    width: 125px;
-    height: 50px;
+.placeholder-box {
+    width: 75%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    background-color: gray;
+
+}
+
+.sign-up {
+    margin-bottom: 32px;
+}
+
+.title {
+  font-size: 36px;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 32px;
+  padding-top: 32px;
+  color: #1F2937;
+
+
+}
+
+.box {
+    width: 100px;
+    height: 100px;
+    border: 2px solid #3882f6;
     border-radius: 15px;
-    border: none;
-    color:#e5e7EB
+}
+
+.all-boxes {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 200px;
+  justify-content: center;
+  text-align: center;
+}
+
+.text {
+    padding: 18px;
 }
