--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
     box-sizing:border-box;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: Roboto, sans-serif;
 }
 
 .navbar {
@@ -108,6 +108,7 @@ h1 {
   display: flex;
   justify-content: center;
   gap: 20px;
+  margin-bottom: 52px;
 }
 
 .container {
@@ -121,3 +122,44 @@ h1 {
 .text {
     padding: 18px;
 }
+
+.quote-section {
+    background-color: #e5e7EB;
+    
+
+}
+.quote {
+    display: flex;
+    padding-right: 20%;
+    padding-left: 20%;
+    padding-top: 52px;
+    font-size: 36px;
+    font-weight: 200;  
+}
+
+.author {
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 20%;
+    font-weight: bold;
+    font-size: 24px;
+    padding-bottom: 52px;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+
+}
+
+.cta-box {
+    width: 75%;
+    height: 125px;
+    display: flex;
+    margin-bottom: 52px;
+    background-color: #3882f6;
+    margin-top: 52px;
+    border-radius: 15px;
+
+ }
+
