--- a/styles.css
+++ b/styles.css
@@ -146,9 +146,11 @@ h1 {
     padding-bottom: 52px;
 }
 
-.call-to-action {
+.last-div {
     display: flex;
     justify-content: center;
+    height: 300px;
+    align-items: center;
 
 }
 
@@ -156,9 +158,7 @@ h1 {
     width: 75%;
     height: 125px;
     display: flex;
-    margin-bottom: 52px;
     background-color: #3882f6;
-    margin-top: 52px;
     border-radius: 15px;
 
  }
