--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ h1 {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-bottom: 52px;
+  margin-bottom: 32px;
 }
 
 .container {
@@ -137,9 +137,10 @@ h1 {
     display: flex;
     padding-right: 20%;
     padding-left: 20%;
-    padding-top: 52px;
+    padding-top: 32px;
     font-size: 36px;
-    font-weight: 200;  
+    font-weight: 200;
+    color: #1F2937
 }
 
 .author {
@@ -148,13 +149,13 @@ h1 {
     padding-right: 20%;
     font-weight: bold;
     font-size: 24px;
-    padding-bottom: 52px;
+    padding-bottom: 32px;
 }
 
 .last-div {
     display: flex;
     justify-content: center;
-    height: 300px;
+    height: 200px;
     align-items: center;
 
 }
@@ -202,7 +203,15 @@ h1 {
     border-radius: 15px;
     color: #f9faf8;
     border: 2px solid white;
-    background-color: #3882f6
+    background-color: #3882f6    
     
-    
+}
+
+.footer {
+    background-color: #1F2937;
+    height: 50px;
+    color: #f9faf8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
